TASK [/home/jpic/work/novapost/ansible-boot-openstack : Ensure server is present]
******************************** failed: [localhost] (item=openstack-test) => { "failed": true, "item": "openstack-test", "module_stderr": "", "module_stdout": "{'auth_type': None, 'availability_zone': None, 'image': 'debian-wheezy', 'image_exclude': '(deprecated)', 'flavor_include': None, 'meta': {'groups': 'openstack-test-group,second-test-group'}, 'flavor': 'm1.small', 'security_groups': ['openstack-test_sg'], 'scheduler_hints': None, 'boot_from_volume': False, 'userdata': None, 'network': 'INSIDE_NET', 'verify': True, 'floating_ips': None, 'flavor_ram': None, 'volume_size': False, 'state': 'present', 'auto_ip': False, 'cloud': None, 'config_drive': False, 'volumes': [], 'key_name': 'test', 'api_timeout': None, 'auth': None, 'endpoint_type': 'public', 'boot_volume': None, 'key': None, 'cacert': None, 'wait': True, 'name': 'openstack-test', 'region_name': None, 'timeout': 180, 'delete_fip': False, 'cert': None, 'terminate_volume': False, 'nics': [], 'floating_ip_pools': None, 'reuse_ips': True}\n\n{\"msg\": \"Error in creating instance (Inner Exception: Multiple possible networks found, use a Network ID to be more specific. (HTTP 409) (Request-ID: req-c5c25208-2e30-40a3-9bfd-05af1060aab3))\", \"failed\": true, \"extra_data\": null, \"invocation\": {\"module_args\": {\"auth_type\": null, \"availability_zone\": null, \"image\": \"debian-wheezy\", \"image_exclude\": \"(deprecated)\", \"flavor_include\": null, \"meta\": {\"groups\": \"openstack-test-group,second-test-group\"}, \"flavor\": \"m1.small\", \"cloud\": null, \"scheduler_hints\": null, \"boot_from_volume\": false, \"userdata\": null, \"network\": \"INSIDE_NET\", \"verify\": true, \"floating_ips\": null, \"flavor_ram\": null, \"volume_size\": false, \"state\": \"present\", \"auto_ip\": false, \"security_groups\": [\"openstack-test_sg\"], \"config_drive\": false, \"region_name\": null, \"key_name\": \"test\", \"api_timeout\": nul

--- a/shippable.yml
+++ b/shippable.yml
@@ -17,6 +17,6 @@ build:
     - python -v
     - echo "$hoo"
     - echo $test
-    - echo dfs
+    - echo dfsd
     - echo yaa
     - echo $COMMIT_MESSAGE
